force-app/main/default/objects/Job_Application__c/Job_Application__c.object-meta.xml
<CustomObject>
    <description>Represents a candidate&#39;s application to a position</description>
    <label>Job Application</label>
    <nameField>
        <displayFormat>JA-{00000}</displayFormat>
        <label>Job Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JobApplications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>