force-app/main/default/objects/Job_Application__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <description>Related To: Candidate
Related List Label: Job Applications</description>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>JobApplications</relationshipLabel>
    <relationshipName>JobApplications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>