force-app/main/default/objects/Job_Application__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <formula>Candidate__r.First_Name__c  + &#39; &#39; +  Candidate__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>