force-app/main/default/objects/Job_Application__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Related To: Position
Related List Label: Job Applications</description>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>JobApplications</relationshipLabel>
    <relationshipName>JobApplications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>